# new_workflow_template

./: .gitignore  README  README.md  celery_task_template.py  deployment.md  deployment.yaml  pyproject.toml  requirements.txt  task_template_v1.py  vpa-buildke.yaml
build_KE/: README.md  build_KE_celery.py  build_KE_celery_test.py  build_KE_nocache.py  build_extraction_chains.py  pyproject.toml
build_KE/build_KE/: __init__.py  build_KE_celery.py  build_KE_nocache.py  build_extraction_chains.py  celery_worker_buildke.py  data_model.py  generate_report.py
build_KE/build_KE/archive/: build_KE_single.py  build_KE_test.py  result_dict_cache.json  tasks_testing_build_KE_celery_KE_32439582.csv  test_report.md
dockerfile/: Dockerfile.base  Dockerfile.buildKE
resources/: default_workflows.json  inspect_workflows.py  load_postgres_env.sh  seed_workflows.py
resources/config/: data_paths.yaml  default.yaml
resources/config/projects/: hepatotoxicity.yaml  nephrotoxicity.yaml
resources/webserver/: ai_service.py  cache_manager.py  data_paths.py  logging_utils.py  socketio.py  storage.py
resources/webserver/controller/: admin.py  auth.py  chat.py  environment.py  file.py  health.py  schema.py  sendgrid.py  stripe_controller.py  task.py  task_router.py  user.py  workflow.py
resources/webserver/model/: __init__.py  chat_session.py  environment.py  file.py  message.py  system_settings.py  task.py  user.py  user_group.py  workflow.py
resources/workflows/: __init__.py  celery_app.py  celery_config.py  utils.py
scripts/: README.md  sync_from_toxindex.py
(+6 files in other folders)
